fixed text alignment when opponent is making choice; finalized overall color/design scheme

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,21 +1,12 @@
-/* Checklist:
-    1) Why won't mobile view media query work?;
-    Change sizing of boxes, make it look more proportional and fit better on one screen properly;
-    2) does new sizing work with mobile view? In mobile view make sure everything is small enough to fit onto one screen;
-    3) change spacing between boxes for mobile & full view;
-    4) By 475 px, change player options to be vertical instead of horizontal;
-    5) Change score counter styling?
-*/
-
 body {
-  width: 65%;
+  width: 70%;
   margin: auto;
   background-color: #86c975;
 }
 
 h1 {
   padding-top: 1.5rem;
-  margin-bottom: 0.25rem;
+  margin-bottom: 2rem;
   color: rgb(12, 71, 35);
   font-size: 250%;
   border: rgb(184, 184, 184);
@@ -28,21 +19,27 @@ h1, h2 {
 h4 {
   text-align: center;
   font-size: x-large;
-  margin-top: 0.75rem;
   margin-bottom: 1rem;
+  position: fixed;
+  padding-bottom: 5rem;
+}
+
+.mystery_image {
+  position: fixed;
+  padding-top: 5rem;
 }
 
 section {
   border: 3px solid rgb(9, 70, 32);
   margin: 1rem 0;
   padding: 1rem;
-  background-color: rgb(184, 184, 184);
+  background-color: rgb(185, 202, 188);
 }
 
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 1rem;
+  grid-gap: 2rem;
 }
 
 main section {
@@ -80,6 +77,7 @@ main section {
 }
 
 section.scoreboard {
+  margin-top: 2rem;
   border-radius: 1em;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -121,9 +119,28 @@ p.label {
 }
 
 .reset button {
+  border-radius: 0.5rem;
+  border-width: 0.1rem;
   padding: .25rem .5rem;
   cursor: pointer;
+  background-color: #d0d8cf;
+}
+
+.reset button:hover {
   transition: all .3s ease-in-out;
+  background-color: #e2ebe1;
+}
+
+@media screen and (max-width: 1500px)  { /* Splits UI at optimal screen size */
+  body {width: 75%;}
+  h1 {margin-bottom: 0.25rem;}
+  .pchoice {
+    margin-bottom: 0rem;
+  }
+}
+
+@media screen and (max-width: 1250px)  { /* Splits UI at optimal screen size */
+  body {width: 80%;}
 }
 
 @media screen and (max-width: 1000px)  { /* Splits UI at optimal screen size */
@@ -131,8 +148,35 @@ p.label {
   main img {transform: scale(.9);}
 }
 
-@media screen and (max-width: 400px)  { /* Mobile view */
-  body {
-    background-color: rgb(0, 0, 0);
+@media screen and (max-width: 650px)  { /* Mobile view */
+  body {width: 85%;}
+  h1 {
+    font-size: 200%;
+    margin-bottom: 0.75rem;
+  }
+  .pchoice {
+    margin-top: 0rem;
+    margin-bottom: .01rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .ochoice {
+    margin-bottom: .01rem;
+    margin-top: 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .scoreboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #player_result {
+    font-size: 110%;
   }
 }
